[gd_scene load_steps=6 format=3 uid="uid://dw1qbul1ifg31"]

[ext_resource type="Texture2D" uid="uid://br2it2sxlkpj2" path="res://Assets/Enemy1.png" id="1_ej26f"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="2_du60e"]
[ext_resource type="AudioStream" uid="uid://byfo2iw4hs8tr" path="res://Audio/death-sound-1-165630.mp3" id="3_qibyn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jp4h"]
size = Vector2(171, 246)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yd8e3"]
size = Vector2(69, 246)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("2_du60e")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(392.85, 352)
scale = Vector2(5.36667, 5.36667)
texture = ExtResource("1_ej26f")

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(382.5, 373)
shape = SubResource("RectangleShape2D_4jp4h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(397.5, 373)
shape = SubResource("RectangleShape2D_yd8e3")

[node name="Death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qibyn")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
